add post to reviews resource
