# api/swagger/swagger.yaml
@@ -118,6 +118,39 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /reviews:
+    x-swagger-router-controller: reviews
+    x-volos-authorizations: {}
+    x-volos-apply: {}
+    post:
+      x-volos-apply: {}
+      description: Posts a new review
+      operationId: postReview
+      parameters:
+        - name: body
+          in: body
+          description: Post review and rating
+          required: true
+          schema:
+            properties:
+              title:
+                type: string
+              restID:
+                type: integer
+              rating:
+                type: integer
+              reviewer:
+                type: string
+              body:
+                type: string
+            required: ["title", "body", "rating"]
+      responses:
+        "200":
+          description: Success
+          schema: {}
+        default:
+          description: Error
+          schema: {}
 # complex objects have schema definitions
 definitions:
   HelloWorldResponse:
